# pepe-video-tools

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  make.bat
docs/: BUILD.md
installer/: PepeVideoStudio.nsi
src/: main.cpp
src/app/: demodata.h  logger.cpp  logger.h  mediapoolmodel.cpp  mediapoolmodel.h  projectmodel.cpp  projectmodel.h  theme.h  timelinemodel.cpp  timelinemodel.h  videocontroller.cpp  videocontroller.h
src/engine/: audioengine.cpp  audioengine.h  compositor.cpp  compositor.h  exporter.cpp  exporter.h  framegrabber.cpp  framegrabber.h  gradematerial.cpp  gradematerial.h  scopesprovider.cpp  scopesprovider.h  scopeview.cpp  scopeview.h  videodecoder.cpp  videodecoder.h  videoframe.h  videosurface.cpp  videosurface.h  waveformprovider.cpp  waveformprovider.h  yuvmaterial.cpp  yuvmaterial.h
src/qml/: Main.qml
src/qml/components/: MenuButton.qml  StatusBar.qml  Tip.qml  TitleBar.qml  TopBar.qml
src/qml/panels/: AudioMixerPanel.qml  DeliverPanel.qml  FusionPanel.qml  Inspector.qml  MediaPool.qml  MonitorsRow.qml  TimelinePanel.qml
src/qml/theme/: Theme.qml
src/shaders/: grade.frag  grade.vert  gradeyuv.frag  gradeyuv.vert  yuv.frag  yuv.vert
